--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>GitStats</title>
+    <script crossorigin src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
